# lightspeed-api-rust

./: Cargo.toml  LICENSE  README.md
src/: client.rs  error.rs  lib.rs  models.rs
src/resources/: account.rs  customer.rs  mod.rs  order.rs  product.rs
